DEFS=-DMODULE_PATH="\"$(libdir)/lithium"\" -DDATA_PATH=\""$(localstatedir)/lithium"\" -DCONFIG_PATH=\""$(sysconfdir)/lithium"\" -DLOG_PATH=\""$(localstatedir)/log/lithium"\"

bin_PROGRAMS = lithium

lithium_SOURCES = main.c \
                    usage.c \
                    signal_handlers.c\
                    version.c \
                    funcexec.c

