moduledir = $(libdir)/lithium
pkglib_LTLIBRARIES = actuator.la

actuator_la_SOURCES = customer.c \
                      form_get.c \
                      form_render.c \
                      main.c \
                      resource_address.c \
                      shutdown.c \
                      form_submit.c \
					  strutil.c \
					  script_upload.c \
					  script_download.c \
					  xml_get.c \
					  xml_render.c \
					  auth.c

actuator_la_LDFLAGS = -module @MODULE_LDFLAGS@

