moduledir = $(libdir)/lithium
module_PROGRAMS = customer.so

customer_so_SOURCES = main.c \
                      form_main.c \
                      site.c \
                      site_sort.c \
					  site_form_list.c \
					  site_form_edit.c \
					  site_form_remove.c \
					  site_xml.c \
					  device.c \
					  device_sort.c \
					  device_move.c \
					  device_resource.c \
					  device_form_list.c \
					  device_form_edit.c \
					  device_form_remove.c \
					  device_xml.c \
					  device_xml_move.c \
					  devtest.c \
					  devtest_servermgr.c \
					  devtest_xintel.c \
					  devtest_xraid.c \
					  devtest_snmp.c \
					  device_xml_test.c \
                      user_form_list.c \
                      user_form_add.c \
                      user_form_page.c \
					  user_form_edit.c \
                      user_form_remove.c \
					  user_xml_list.c \
					  user_xml_update.c \
					  user_xml_remove.c \
                      authentication.c \
                      authentication_handler.c \
                      resready_handler.c \
                      notification_handler.c \
                      email.c \
                      sms.c \
					  pgsql_maint.c \
                      inventory.c \
                      inventory_add.c \
                      inventory_get.c \
                      inventory_handler.c \
                      inventory_listsort.c \
					  inventory_remove.c \
					  inventory_static.c \
					  inventory_sql.c \
					  inventory_itemlist.c \
					  inventory_form_links.c \
					  inventory_form_vendorlist.c \
					  inventory_form_vendormain.c \
					  inventory_form_productmain.c \
					  inventory_form_devicelist.c \
					  inventory_form_devicemain.c \
					  inventory_form_sitelist.c \
					  inventory_form_sitemain.c \
					  inventory_form_historymain.c \
					  inventory_form_static_edit.c \
					  inventory_form_static_remove.c \
					  infstat.c \
					  infstat_cat.c \
					  infstat_cat_sql.c \
					  infstat_cat_formsection.c \
					  infstat_cat_form_edit.c \
					  infstat_cat_form_remove.c \
					  infstat_issue.c \
					  infstat_issue_sql.c \
					  infstat_issue_form_edit.c \
					  infstat_issue_form_close.c \
					  infstat_form_adminlinks.c \
					  infstat_form_main.c \
					  summary_form.c \
					  navtree.c \
					  ipregistry.c \
					  ipregistry_entry.c \
					  ipregistry_network.c \
					  ipregistry_handler.c \
					  ipregistry_add.c \
					  ipregistry_set.c \
					  ipregistry_get.c \
					  ipregistry_remove.c \
					  ipregistry_listsort.c \
					  ipregistry_xml_network_list.c \
					  ipregistry_xml_network_scan.c \
					  svcregistry.c \
					  svcregistry_handler.c \
					  svcregistry_add.c \
					  svcregistry_remove.c \
					  svcregistry_entry.c \
					  svcregistry_xml_list.c \
					  procregistry.c \
					  procregistry_handler.c \
					  procregistry_add.c \
					  procregistry_remove.c \
					  procregistry_entry.c \
					  procregistry_xml_list.c \
					  lunregistry.c \
					  lunregistry_handler.c \
					  lunregistry_add.c \
					  lunregistry_remove.c \
					  lunregistry_entry.c \
					  lunregistry_xml_list.c \
					  xsanregistry.c \
					  xsanregistry_handler.c \
					  xsanregistry_add.c \
					  xsanregistry_remove.c \
					  xsanregistry_entry.c \
					  xsanregistry_device.c \
					  xsanregistry_xml_list.c \
					  incident.c \
					  incident_id.c \
					  incident_handler.c \
					  incident_selfdestruct.c \
					  incident_bind.c \
					  incident_unbind.c \
					  incident_sql.c \
					  incident_notify.c \
					  incident_form_inclist.c \
					  incident_xml_list.c \
					  dhcp.c \
					  dhcp_daemon.c \
					  dhcp_subnet.c \
					  dhcp_range.c \
					  dhcp_form_subnet_list.c \
					  dhcp_form_subnet_edit.c \
					  dhcp_form_subnet_remove.c \
					  dhcp_form_subnet_main.c \
					  dhcp_form_range_edit.c \
					  dhcp_form_range_remove.c \
					  case.c \
					  case_id.c \
					  case_open.c \
					  case_reopen.c \
					  case_close.c \
					  case_str.c \
					  case_sql.c \
					  case_xml.c \
					  case_xml_get.c \
					  case_xml_list.c \
					  case_xml_update.c \
					  case_xml_open.c \
					  case_xml_reopen.c \
					  case_xml_close.c \
					  case_form_main.c \
					  case_form_view.c \
					  case_form_edit.c \
					  case_form_logupdate.c \
					  case_form_close.c \
					  case_logentry.c \
					  case_logentry_sql.c \
					  case_logentry_xml.c \
					  case_logentry_xml_list.c \
					  case_logentry_xml_insert.c \
					  case_entity.c \
					  case_entity_sql.c \
					  case_entity_xml_list.c \
					  case_entity_xml_insert.c \
					  case_entity_xml_delete.c \
					  customer_xml.c \
					  triggerset.c \
					  record_sql.c \
					  lic.c \
					  lic_key.c \
					  lic_entitlement.c \
					  lic_take.c \
					  lic_form_main.c \
					  lic_form_add.c \
					  lic_form_remove.c \
					  lic_xml_key_list.c \
					  lic_xml_key_add.c \
					  lic_xml_key_remove.c \
					  lic_xml_entitlement.c \
					  restart.c \
					  restart_form.c \
					  restart_xml.c \
					  vendor_xml_list.c \
					  action.c \
					  action_id.c \
					  action_proc.c \
					  action_script.c \
					  action_log.c \
					  action_configvar.c \
					  action_sql.c \
					  action_sql_candidates.c \
					  action_incident.c \
					  action_xml.c \
					  action_xml_list.c \
					  action_xml_script_list.c \
					  action_xml_configvar_list.c \
					  action_xml_entity.c \
 					  action_xml_update.c \
 					  action_xml_delete.c \
 					  action_xml_execute.c \
 					  action_xml_history.c \
 					  action_xml_cancel.c \
					  action_xml_minimum_severity.c \
 					  script_exec.c \
 					  script_xml_delete.c \
 					  script_xml_download.c \
 					  script_xml_repair.c \
 					  script_xml_upload.c \
					  bonjour.c \
					  bonjour_xml_list.c \
 					  service_xml_script_list.c \
					  devnormal_handler.c \
					  ../device/service.c \
					  ../device/service_configvar.c \
					  ../device/service_log.c \
					  ../device/service_proc.c \
					  ../device/service_script.c \
					  ../device/service_sql.c \
					  ../device/service_object.c \
					  ../device/service_metric.c \
					  ../device/service_trigger.c \
					  ../device/service_triggerset.c \
					  ../device/service_refresh.c \
					  ../device/service_xml.c \
					  ../device/record.c \
					  ../device/record_eval.c \
					  ../device/record_recrule.c \
					  ../device/record_recrule_sql.c \
					  netscan.c \
					  netscan_proc.c \
					  demorego_form_main.c \
					  demorego_form_register.c \
					  document.c \
					  document_id.c \
					  document_xml_list.c \
					  document_xml_create.c \
					  document_xml_get.c \
					  document_xml_edit.c \
					  document_xml_edit_cancel.c \
					  document_xml_commit.c \
					  document_xml_delete.c \
					  document_xml_update.c \
					  document_sql.c \
					  scene.c \
					  scene_get.c \
					  scene_commit.c \
					  scene_delete.c \
					  scene_sql.c \
					  scene_overlay.c \
					  vrack.c \
					  vrack_get.c \
					  vrack_commit.c \
					  vrack_delete.c \
					  vrack_sql.c \
					  group.c \
					  group_id.c \
					  group_sql.c \
					  group_xml_create.c \
					  group_xml_update.c \
					  group_xml_delete.c \
					  group_xml_get.c \
					  group_xml_entity.c \
					  modb_xml_script_list.c \
					  imagecache.c
					  
customer_so_DEPENDENCIES = ../induction/libinduction.la
customer_so_LDADD = ../induction/libinduction.la
customer_so_LDFLAGS = -shared -bundle

