moduledir = $(libdir)/lithium
module_PROGRAMS = device.so

device_so_SOURCES = main.c \
                    form_main.c \
                    vendor.c \
                    vendor_load.c \
					refresh.c \
					navtree.c \
                    devform.c \
					metform.c \
					trgform.c \
					osx.c \
					avail.c \
					avail_item.c \
					avail_cntform.c \
					avail_objform.c \
					avail_record.c \
					avail_refresh.c \
					avail_object.c \
                    snmp.c \
                    snmp_config.c \
                    snmp_session.c \
                    snmp_fdset.c \
                    snmp_util.c \
                    snmp_parse.c \
                    snmp_pducallback.c \
                    snmp_get.c \
                    snmp_walk.c \
					snmp_objfact.c \
					snmp_objfact_refresh.c \
					snmp_metric.c \
					snmp_metric_refresh.c \
					snmp_iface.c \
					snmp_iface_objfact.c \
					snmp_iface_cntform.c \
					snmp_iface_objform.c \
					snmp_iface_refcb.c \
					snmp_swrun.c \
					snmp_swrun_objfact.c \
					snmp_swrun_cntform.c \
					snmp_ipaddr.c \
					snmp_ipaddr_objfact.c \
					snmp_ipaddr_ifacematch.c \
					snmp_ipaddr_cntform.c \
					snmp_ipaddr_objform.c \
					snmp_ipaddr_netmask.c \
					snmp_sysinfo.c \
					snmp_sysinfo_item.c \
					snmp_sysinfo_cntform.c \
					snmp_sysinfo_objform.c \
					snmp_sysinfo_refcb.c \
					snmp_storage.c \
					snmp_storage_item.c \
					snmp_storage_objfact.c \
					snmp_storage_cntform.c \
					snmp_storage_objform.c \
					snmp_storage_refcb.c \
					snmp_hrfilesys.c \
					snmp_hrfilesys_objfact.c \
					snmp_hrfilesys_refcb.c \
					snmp_hrcpu.c \
					snmp_hrcpu_item.c \
					snmp_hrcpu_objfact.c \
					snmp_hrcpu_cntform.c \
					snmp_hrcpu_objform.c \
					snmp_route.c \
					snmp_route_item.c \
					snmp_route_objfact.c \
					snmp_route_cntform.c \
					snmp_route_objform.c \
					snmp_route_ifacematch.c \
					snmp_users.c \
					snmp_users_item.c \
					snmp_users_cntform.c \
					snmp_users_objform.c \
					snmp_nscpu.c \
					snmp_nscpu_item.c \
					snmp_nscpu_refcb.c \
					snmp_nsdiskio.c \
					snmp_nsdiskio_item.c \
					snmp_nsdiskio_objfact.c \
					snmp_nsload.c \
					snmp_nsload_cntform.c \
					snmp_nsload_item.c \
					snmp_nsload_objform.c \
					snmp_nsload_refcb.c \
					snmp_nsnwtput.c \
					snmp_nsram.c \
					snmp_nsram_item.c \
					snmp_nstcpconn.c \
					snmp_nstcpconn_item.c \
					snmp_nstcpconn_objfact.c \
					snmp_xsnmp.c \
					icmp.c \
					icmp_item.c \
					icmp_objfact.c \
					icmp_cntform.c \
					icmp_objform.c \
					icmp_echo.c \
					icmp_refresh.c \
					nwtput.c \
					nwtput_item.c \
					nwtput_cntform.c \
					nwtput_objform.c \
					nwtput_metset.c \
					triggerset_form_list.c \
					triggerset_form_apprule.c \
					triggerset_form_apprule_edit.c \
					triggerset_form_apprule_remove.c \
					triggerset_form_valrule.c \
					triggerset_form_valrule_edit.c \
					triggerset_form_valrule_remove.c \
					triggerset_xml_list.c \
					triggerset_xml_apprule_list.c \
					triggerset_xml_apprule_update.c \
					triggerset_xml_apprule_delete.c \
					triggerset_xml_valrule_list.c \
					triggerset_xml_valrule_update.c \
					triggerset_xml_valrule_delete.c \
					triggerset_xml_disable_by_trigger.c \
					triggerset_xml_reset_rules.c \
					pdfgraph_xml_render.c \
					xmlgraph_xml_render.c \
					record.c \
					record_recrule.c \
					record_eval.c \
					record_recrule_sql.c \
					record_form_metlist.c \
					record_form_recrule.c \
					record_form_recrule_edit.c \
					record_form_recrule_remove.c \
					rrdxport_xml.c \
					service.c \
					service_configvar.c \
					service_log.c \
					service_proc.c \
					service_script.c \
					service_sql.c \
					service_object.c \
					service_metric.c \
					service_trigger.c \
					service_triggerset.c \
					service_refresh.c \
					service_xml.c \
					service_xml_configvar_list.c \
					service_xml_delete.c \
					service_xml_history.c \
					service_xml_list.c \
					service_xml_script_list.c \
					service_xml_update.c \
					restart.c \
					restart_form.c \
					restart_xml.c \
					incident_xml_clear.c \
					modb.c \
					modb_metric.c \
					modb_objfact.c \
					modb_cntform.c \
					modb_objform.c \
					modb_parse.c \
					objform.c \
					cntform.c \
					procpro.c \
					procpro_object.c \
					procpro_refresh.c \
					procpro_sql.c \
					procpro_xml.c \
					procpro_xml_add.c \
					procpro_xml_update.c \
					procpro_xml_delete.c \
					device_xml.c

device_so_DEPENDENCIES = ../induction/libinduction.la
device_so_LDADD = ../induction/libinduction.la
device_so_LDFLAGS = -shared -bundle -flat_namespace -undefined suppress

