pkglibdir = $(libdir)/lithium/vendor_modules
pkglib_LTLIBRARIES = 3com.la

3com_la_SOURCES = main.c \
				   fan.c \
				   fan_item.c \
				   fan_objfact.c \
				   fan_objform.c \
				   fan_cntform.c \
				   sensor.c \
				   sensor_item.c \
				   sensor_objfact.c \
				   sensor_objform.c \
				   sensor_cntform.c \
				   power.c \
				   power_item.c \
				   power_objfact.c \
				   power_objform.c \
				   power_cntform.c \
				   fantray.c \
				   fantray_item.c \
				   fantray_objfact.c \
				   fantray_objform.c \
				   fantray_cntform.c \
				   expmodule.c \
				   expmodule_item.c \
				   expmodule_objfact.c \
				   expmodule_objform.c \
				   expmodule_cntform.c

3com_la_LDFLAGS = -module @MODULE_LDFLAGS@

