moduledir = $(libdir)/lithium/vendor_modules
pkglib_LTLIBRARIES = activestorage.la

activestorage_la_SOURCES = main.c \
                   volume.c \
                   volume_item.c \
                   volume_objfact.c \
                   temp.c \
                   temp_item.c \
                   temp_objfact.c \
                   ctrl.c \
                   ctrl_item.c \
                   ctrl_objfact.c \
                   fibreport.c \
                   fibreport_item.c \
                   fibreport_objfact.c \
                   drive.c \
                   drive_item.c \
                   drive_objfact.c \
                   raidset.c \
                   raidset_item.c \
                   raidset_objfact.c \
                   fans.c \
                   fans_item.c \
                   fans_objfact.c \
				   battery.c \
                   battery_item.c \
                   battery_objfact.c \
                   voltage.c \
                   voltage_item.c \
                   voltage_objfact.c \
                   system.c \
                   system_item.c \
                   system_objfact.c \
				   psu.c \
				   psu_item.c \
				   psu_objfact.c

activestorage_la_LDFLAGS = -module @MODULE_LDFLAGS@

