pkglibdir = $(libdir)/lithium/vendor_modules
pkglib_LTLIBRARIES = alliedtelesyn.la

alliedtelesyn_la_SOURCES = main.c \
						   atcpu.c \
						   atcpu_cntform.c \
						   atcpu_item.c \
						   atcpu_objform.c \
						   fanps.c \
						   fanps_cntform.c \
						   fanps_item.c \
						   fanps_objform.c \
						   snmp_iface.c \
						   snmp_iface_cntform.c \
						   snmp_iface_objform.c \
						   snmp_iface_objfact.c

alliedtelesyn_la_LDFLAGS = -module @MODULE_LDFLAGS@

