pkglibdir = $(libdir)/lithium/vendor_modules
pkglib_LTLIBRARIES = cisco.la

cisco_la_SOURCES = main.c \
                   mempool.c \
                   mempool_item.c \
                   mempool_objfact.c \
                   mempool_cntform.c \
                   mempool_objform.c \
				   cpu.c \
                   cpu_item.c \
                   cpu_objfact.c \
                   cpu_cntform.c \
                   cpu_objform.c \
				   pixconn.c \
				   pixconn_item.c \
				   pixconn_objfact.c \
				   pixconn_cntform.c \
				   pixconn_objform.c

cisco_la_LDFLAGS = -module @MODULE_LDFLAGS@

