pkglibdir = $(libdir)/lithium/vendor_modules
pkglib_LTLIBRARIES = qlogic.la

qlogic_la_SOURCES = qlogic.c \
					sensor.c \
					sensor_item.c \
					sensor_objfact.c \
                    sensor_cntform.c \
                    sensor_objform.c \
					revision.c \
					revision_item.c \
					revision_objfact.c \
					sysinfo.c \
                    sysinfo_item.c \
                    sysinfo_objfact.c \
                    sysinfo_cntform.c \
                    sysinfo_objform.c \
					port.c \
					port_item.c \
					port_objfact.c \
					port_refcb.c \
					port_cntform.c \
					port_objform.c \
					unit.c \
					unit_item.c \
					unit_objfact.c \
					unit_refcb.c \
					load.c \
					load_item.c \
					load_refcb.c \
					load_objform.c \
					load_cntform.c

qlogic_la_LDFLAGS = -module @MODULE_LDFLAGS@

