moduledir = $(libdir)/lithium/vendor_modules
module_PROGRAMS = foundry.so

foundry_so_SOURCES = main.c \
					 rserv.c \
					 rserv_item.c \
					 rserv_objfact.c \
					 rserv_cntform.c \
					 rserv_objform.c \
					 rport.c \
					 rport_item.c \
					 rport_objfact.c \
					 rport_cntform.c \
					 rport_objform.c \
					 vserv.c \
					 vserv_item.c \
					 vserv_objfact.c \
					 vserv_cntform.c \
					 vserv_objform.c \
					 vport.c \
					 vport_item.c \
					 vport_objfact.c \
					 vport_cntform.c \
					 vport_objform.c

foundry_so_LDFLAGS = @MODULE_LDFLAGS@

